test/e2e/features/basicrouting/testdata/gateway-with-route.yaml
# Since we want to validate basic routing behavior across multiple ports, we define a Gateway
# with multiple listeners instead of using the base "gateway" from test/e2e/tests/manifests/kgateway-base.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTP
      port: 80
      name: http-privileged
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: example-svc
          namespace: nginx-shared
          port: 8080
---
# Authorizes the default-ns HTTPRoutes in this suite to reference the shared nginx
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-default-httproutes
  namespace: nginx-shared
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
