test/e2e/features/basicrouting/testdata/headless-service.yaml
# Headless example-svc (clusterIP: None, ns nginx) over the shared nginx pod, for TestHeadlessService.
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: nginx
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
